corrected button alignment

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,11 +1,5 @@
 body {
-
   background: white;
-
-  @media (min-width: 22rem) {
-    background-size: cover;
-    background-position: 50% 50%;
-  }
 }
 
 .container {
