--- a/src/components/orderComplete.module.scss
+++ b/src/components/orderComplete.module.scss
@@ -14,19 +14,20 @@
     font-size: .5rem;
   }
 
-.button {
-  background: #245fc1;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  display: inline-block;
-  font-weight: 300;
-  font-size: 1rem;
-  line-height: 1;
-  padding: 1rem;
-  text-decoration: none;
-  list-style: none;
-}
+  .button {
+    display: flex;
+    justify-content: flex-end;
+    a {
+      background: #245fc1;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-weight: 300;
+      font-size: 1rem;
+      line-height: 1;
+      padding: 1rem;
+    }
+  }
 
 .listHeader {
   h1 {
